force-app/main/default/objects/AuthProviderSetup__mdt/AuthProviderSetup__mdt.object-meta.xml
<CustomObject>
    <label>AuthProviderSetup</label>
    <pluralLabel>AuthProviderSetups</pluralLabel>
</CustomObject>