force-app/main/default/objects/AuthProviderSetup__mdt/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>CID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>