force-app/main/default/objects/AuthProviderSetup__mdt/fields/ConnectedAppKey__c.field-meta.xml
<CustomField>
    <fullName>MVDG__ConnectedAppKey__c</fullName>
    <label>ConnectedAppKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>