force-app/main/default/objects/AuthProviderSetup__mdt/fields/ConnectedAppSecret__c.field-meta.xml
<CustomField>
    <fullName>ConnectedAppSecret__c</fullName>
    <label>ConnectedAppSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>