force-app/main/default/objects/AuthProviderSetup__mdt/fields/CSEC__c.field-meta.xml
<CustomField>
    <fullName>CSEC__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>CSEC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>